--- a/src/components/InputContainer.css
+++ b/src/components/InputContainer.css
@@ -1,7 +1,14 @@
+#input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    flex-grow: 2;
+    justify-content: space-between;
+}
+
 #input-container textarea {
-    width: calc(100% - 2rem - 2px);
-    min-height: 200px;
     padding: 1rem;
+    height: 100%;
     margin-bottom: 1rem;
     border: 2px solid #8b4513;
     border-radius: 8px;
@@ -23,27 +30,6 @@
     color: #5c3d2e;
     font-weight: bold;
     display: block;
-}
-
-.poem-info {
-    margin-bottom: 1rem;
-    padding: 1rem;
-    background-color: #f0e6d2;
-    border: 1px solid #8b4513;
-    border-radius: 8px;
-}
-
-.poem-info .poem-title {
-    font-family: 'Cinzel', serif;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #8b4513;
-    margin: 0;
-}
-
-.poem-info .poem-author {
-    font-style: italic;
-    margin: 0.5rem 0 0;
 }
 
 #word-frequency {
