--- a/src/components/OutputContainer.css
+++ b/src/components/OutputContainer.css
@@ -2,9 +2,9 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-y: hidden;
     row-gap: 1rem;
-    margin-bottom: 2rem;
+    align-items: stretch;
 }
 
 #processed-text {
@@ -21,7 +21,6 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 1rem;
 }
 
 .slider-container {
@@ -74,15 +73,22 @@
     .controls-container {
         flex-direction: column;
         align-items: stretch;
+        margin-bottom: 0;
     }
 
     .slider-container {
         margin-right: 0;
-        margin-bottom: 1rem;
+        flex-direction: column;
+    }
+
+    .slider-container label {
+        margin: 0;
+        white-space: unset;
     }
 
     .reset-button {
         width: 100%;
+        margin: 0;
     }
 }
 
@@ -189,13 +195,6 @@
         align-items: stretch;
         margin-right: 0;
         margin-bottom: 1rem;
-    }
-
-    .flash-input,
-    .flash-submit,
-    .show-line-button {
-        width: 100%;
-        margin-bottom: 0.5rem;
     }
 }
 
